--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Improt Font */
-@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap'); */
+@import url(https://db.onlinewebfonts.com/c/229a57bbeef591e04a1fdfe347c90864?family=Centra+No2);
 
 /* General Style */
  * {
@@ -9,8 +9,15 @@
     box-sizing: border-box;
 }
 
-html {
+/* html {
     font-family: "ABeeZee", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 62.5%;
+} */
+
+html {
+    font-family: "Centra No2", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 62.5%;
